--- a/CSSabout.css
+++ b/CSSabout.css
@@ -2,10 +2,11 @@
 *{
     margin: 0;
     padding: 0;
+    
     box-sizing: border-box;
     font-family:'poppin', Arial, sans-serif;
+  
 }
-
 
 .home {
  
@@ -17,7 +18,7 @@
    padding-left: 10%;
    padding-right: 5%;
 
-}
+} 
 
 .home-image{
     
@@ -81,19 +82,21 @@
 .home-contact p{
    font-size:20px ;
    margin-top: 20px;
-   /* font-family: 'Times New Roman', Times, serif; */
- /* font-family: 'Courier New', Courier, monospace; */
- /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,sans-serif; */
- /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
- /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
- /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
- /* font-family: Arial, Helvetica, sans-serif; */
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+/* .home-sci {
+    margin: 30px 0 40px;
+} */
 .home-sci {
-    margin: 25px 0 40px;
-   
+    margin-top: 10px;
+    display: flex;
+    height: 10vh;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: center;
+    row-gap: .9em;
 }
 .home-sci a{
      
@@ -108,10 +111,13 @@
     /* color: #00abf0; */
     color: #fff;
     text-decoration: none;
-    margin-left: 12px;
+    margin-left: 10px;
+    display: flex;
+    column-gap: 10px;
+
     transition: .2s;
     font-size: 30px;
-    }
+ }
 
   
 
@@ -130,7 +136,7 @@
     
   .home {
        margin-top: -90px;
-       height: 135vh;
+       height: 140vh;
        /* background: linear-gradient(-65deg,#051c50 30%,#e042f8 100%); */
        justify-content: space-between; 
        padding-left: 10%;
@@ -179,20 +185,7 @@
         padding-top: 45px;
         padding-bottom: 10px;
         font-size:39px ;
-        line-height: 1.2 ;  
-        
-        /* font-family: 'Times New Roman', Times, serif; */
-        /* font-family: 'Courier New', Courier, monospace; */
-        /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,sans-serif; */
-        /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
-        /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-        /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-        /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
-        /* font-family: Arial, Helvetica, sans-serif; */
-        /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
-        
-        
-        
+        line-height: 1.2 ;       
     }
         
     .home-contact h3{
@@ -207,7 +200,7 @@
         animation: animationText 6s linear infinite;
         
         /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
-        }  
+    }  
         @keyframes animationText{
             0% , 95% , 100%{
                 background-position: -390px 0;
@@ -219,13 +212,13 @@
         
         .home-contact p{
            font-size:18px ;
-           margin-top: 20px;
-           
-          
+           margin-top: 1em;
+           margin-bottom: 1em;
+           /* display: block;   */
         }
 
         .home-contact{
-            max-width: 600px;
+            /* max-width: 6550px; */
             color: #fff;
             text-align: left;
         }
@@ -241,6 +234,10 @@
     max-width: 30px;
    
  }
+ /* #git{
+    max-width: 300px;
+   
+ } */
 
 
  /* font-family: 'Times New Roman', Times, serif; */
